crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_child_block_close_tag_inside.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x { </p> }"
---
Markup(
    Child(
        If(
            Body(
                Item(
                    Element(
                        CloseName(
                            1,
                            14,
                        ),
                        1,
                        12,
                    ),
                    1,
                    12,
                ),
                1,
                10,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
