crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_child_block_end.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x { <b>y</b>"
---
Markup(
    Child(
        If(
            Body(
                End(
                    ExpectedEnd {
                        opening: Position {
                            line: 1,
                            column: 10,
                        },
                        boundary: Position {
                            line: 1,
                            column: 20,
                        },
                        unexpected: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                ),
                1,
                10,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
