crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_child_block_let.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x { let y }</p>"
---
Markup(
    Child(
        If(
            Body(
                Item(
                    Stmt(
                        Let(
                            Equals(
                                1,
                                18,
                            ),
                            1,
                            12,
                        ),
                        1,
                        12,
                    ),
                    1,
                    12,
                ),
                1,
                10,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
