crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_directive_unknown.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@foo</p>"
---
Markup(
    Child(
        UnknownDirective(
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
