crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_directive_unknown_after_hole.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>{x}@iffy</p>"
---
Markup(
    Child(
        UnknownDirective(
            1,
            7,
        ),
        1,
        4,
    ),
    1,
    1,
)
