crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_else_after_comment_text.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x { a } // c\n@else { b }</p>"
---
Markup(
    Child(
        StrayElse(
            2,
            1,
        ),
        1,
        4,
    ),
    1,
    1,
)
