crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_else_without_if.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@else { <b>x</b> }</p>"
---
Markup(
    Child(
        StrayElse(
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
