crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_empty_without_for.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@empty { <b>x</b> }</p>"
---
Markup(
    Child(
        StrayEmpty(
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
