crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_for_key_keyword.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<ul>@for x in xs; foo x { <li>{x}</li> }</ul>"
---
Markup(
    Child(
        For(
            Key(
                1,
                19,
            ),
            1,
            5,
        ),
        1,
        5,
    ),
    1,
    1,
)
